# corebuffer

./: .gitignore  CMakeLists.txt  CoreData.pro  LICENSE.txt  PULL_REQUEST_TEMPLATE.md  README.md  appveyor.yml  cppoutput.cpp  cppoutput.h  main.cpp  package.cpp  package.h  parser.cpp  parser.h  testout.h
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
args/: args.hxx
cd/: basetype.cd
cor/: basetypes.cor  enumtypes.cor  flagtypes.cor  game.cor  parser_errors.cor  schema.cor  shop.cor  some_errors.cor  tabletypes.cor  uniontypes.cor
doc/: idl.md
src/: corebuffer.cpp  coredata.cpp  cppoutput.cpp  cppoutput.h  fileerror.h  fileposition.h  package.h  parser.cpp  parser.h  structurecheck.cpp  structurecheck.h
test/: basetype_tests.cpp  basetypes.h  corebuffer_tests.cpp  corebufferoutput_tests.cpp  enumtypes.h  enumtypes_tests.cpp  flagtypes.h  flagtypes_tests.cpp  game.h  parser_error_tests.cpp  parser_tests.cpp  schema.h  schema_tests.cpp  shop.h  shop_tests.cpp  structurecheck_tests.cpp  tabletypes.h  tabletypes_tests.cpp  uniontypes.h  uniontypes_tests.cpp
